2006-08-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: Updated to reflect recent changes.

==============================================================================

2006-08-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.5 released (SVN tag: release-3-10-5)

	* doc/local/index.doc.in, README: Updated reference documentation
	index page (merged rev. 617:621 from itpp-3-10 branch).

	* NEWS: Updated to reflect recent changes (merged rev. 617:621
	from itpp-3-10 branch).

2006-08-12  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/modulator_nd.{cpp,h}, itpp/comm/llr.{cpp,h},
	tests/modulator_nd_test.ref, tests/llr_test.ref: Documentation
	updates and cosmetic changes.

2006-08-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated with Windows tests (merged
	rev. 612:613 from itpp-3-10 branch).

	* itpp/base/parser.cpp: Minor fix of uninitialised bool variable.

	* itpp/base/itmisc.h, itpp/base/random.h: Replaced deprecated
	hypot(x, y) function with std::sqrt(x*x + y*y) calculation. BTW,
	macro definition M_2PI replaced with a global constant m_2pi.

	* itpp/base/mat.cpp, itpp/base/mat.h: Fixed a minor problem of
	uninitialised matrix elements, when parsing values from a string
	literal.

	* itpp/signal/sigfun.cpp: Fixed bug [1538210], caused by
	uninitialised variable `m2' used for covariance calculation.
	Thanks to Max Moorkamp for reporting this bug.

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	tests/modulator_test.ref: Further cosmetic changes and minor fixes
	in QPSK, PSK and QAM modulator classes. Use the new trunc_log()
	function when calculating log-likelihood ratio. Reference data for
	test program updated accordingly.

2006-08-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h: Minor fixes in
	BPSK and PAM modulator classes. Now use the new trunc_log()
	function when calculating log-likelihood ratio.
