@@ -5,10 +5,10 @@
   <title>Welcome to $projectname!</title>
   <link href="doxygen.css" rel="stylesheet" type="text/css">
   <link href="tabs.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="./favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div style="width: 100%; height: 40px; background-color: #ffff00; border: 1px solid #b0b0b0; text-align: right; margin: 2px; padding: 2px;">
-  <a href="http://itpp.sourceforge.net"><img src="./itpp_logo.png" align="left" alt="IT++ Logo" border="0" width="100" height="40"></a>
-  <a href="http://newcom.ismb.it"><img src="./newcom_logo.png" align="right" alt="Newcom Logo" border="0" width="100" height="40"></a>
+  <a href="http://itpp.sourceforge.net"><img src="itpp_logo.png" alt="IT++ Logo" style="float: left; border: 0;"></a>
+  <a href="http://newcom.ismb.it"><img src="newcom_logo.png" alt="Newcom Logo" style="float: right; border: 0;"></a>
 </div>
